# hologram_reconstruction

./: .gitignore  README.md  image.py  pyproject.toml  requirements.txt
backpropagate/: convolution_approach.py  fresnel_approach.py  reference_waves.py
backpropagate/specific_backprop_methods/: Fink.py
computational_techniques/: detect_object_supports.py
computational_techniques/phase_retrieval/: phase_retrieval_Fink.py
computational_techniques/twin_image_elimination/: twin_image_elim_Ozcan.py
examples/: generation.py  reconstruction.py
generate/: generate_hologram.py
generate/specific_gen_methods/: Fink.py
holopoe/: errors.py  image.py
holopoe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
holopoe/backpropagate/: convolution_approach.py  fresnel_approach.py  reference_waves.py
holopoe/computational_techniques/: detect_object_supports.py
holopoe/generate/: generate_hologram.py
holopoe/inout/: io.py  visualize.py
holopoe/process/: image_processing.py
holopoe/scalar_diffraction/: convolution_approach.py  fresnel_approach.py  kirchoff_integral.py  non_paraxial_convolution.py  utils.py
inout/: io.py  visualize.py
process/: image_processing.py
scalar_diffraction/: convolution_approach.py  fresnel_approach.py  kirchoff_integral.py  non_paraxial_convolution.py
