[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holopoe"
version = "0.0.1"
authors = [
  { name="Marc de Cea", email="mdecea@mit.edu" },
]
description = "Package for holographic reconstruction"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mdecea/hologram_reconstruction"
"Bug Tracker" = "https://github.com/mdecea/hologram_reconstruction/issues"